# mosq-ext-auth

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yaml
include/mosq_ext_auth/: auth_handler.h  mosq_ext_auth.h  user_database.h  util.h
include/mosq_ext_auth/auth/: file_auth.h  http_auth.h
src/: auth_handler.c  mosq_ext_auth.c  user_database.c  util.c
src/auth/: http_auth.c
